# Volt

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  build.sh  install.bat  install_context_menu.reg  linux_build.sh  uninstall.bat
release/: moc_CodeEditor.cpp  moc_FileMenu.cpp  moc_MainWindow.cpp  moc_StatusBar.cpp  moc_predefs.h
src/: CMakeLists.txt  main.cpp
src/editor/: CodeEditor.cpp  CodeEditor.h  Minimap.cpp  Minimap.h
src/logging/: VoltLogger.cpp  VoltLogger.h
src/resources/: app.qrc
src/resources/icons/: icons-carbon.json
src/styles/: StyleHelper.cpp  StyleHelper.h  StyleManager.cpp  StyleManager.h
src/themes/: Theme.cpp  Theme.h  ThemeDimensions.h
src/themes/themes/: dark.json  light.json
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/components/: CustomTabBar.cpp  CustomTabBar.h  CustomTabWidget.cpp  CustomTabWidget.h  EditorTabBar.cpp  EditorTabBar.h  FilledColorButton.cpp  FilledColorButton.h  IconButton.cpp  IconButton.h  USAGE.md
src/ui/explorer/: ProjectExplorer.cpp  ProjectExplorer.h
src/ui/menubar/: FileMenu.cpp  FileMenu.h
src/ui/sidebar/: CustomTreeView.cpp  CustomTreeView.h  FileIconProvider.cpp  FileIconProvider.h  Sidebar.cpp  Sidebar.h
src/ui/statusbar/: StatusBar.cpp  StatusBar.h
src/ui/utils/: IconUtils.cpp  IconUtils.h
